# oz_django

./: pyproject.toml
.github/workflows/: ci.yaml
oz_django/: settings.py
